--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGODB_ATLAS=mongodb+srv://nodeCafe:1924@cluster0.l9dhbi2.mongodb.net/cafeDB
+MONGODB_ATLAS=mongodb+srv://nodeCafe:1924@cluster0.wvgpsvp.mongodb.net/cafeDB
