--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGODB_ATLAS=mongodb+srv://nodeCafe:1924@cluster0.wvgpsvp.mongodb.net/cafeDB
 FIRMA=22001014
 GOOGLE_CLIENT_ID=687904084086-dv98fsnn9op4a2rfd0q4gunakbj2egi2.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
+CLOUDINARY_URL=cloudinary://627712917454186:uZAep8Dq7FsFXPWjPX2ImsOwROc@dvqzsjss9
